--- a/FlightReservation/src/main/resources/application.properties
+++ b/FlightReservation/src/main/resources/application.properties
@@ -9,13 +9,57 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 #server
-server.port=8080
-
-#spring mvc
-spring.mvc.view.prefix=/webapp/
-spring.mvc.view.suffix=.html
+server.port=8081
 
 
 #validator
 server.error.include-message=always
 server.error.include-binding-errors=always
+
+#servlet
+#server.servlet.context-path=/flightreservation
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#spring mvc
+#spring.mvc.view.prefix=/webapp/
+#spring.mvc.view.suffix=.html
+
+
+#Actuator
+#management.endpoints.web.exposure.include=*
