--- a/FlightReservation/src/main/resources/application.properties
+++ b/FlightReservation/src/main/resources/application.properties
@@ -17,7 +17,7 @@ server.error.include-message=always
 server.error.include-binding-errors=always
 
 #servlet
-#server.servlet.context-path=/flightreservation
+server.servlet.context-path=/flightreservation
 
 
 
