--- a/FlightReservation/src/main/resources/application.properties
+++ b/FlightReservation/src/main/resources/application.properties
@@ -19,7 +19,16 @@ server.error.include-binding-errors=always
 #servlet
 server.servlet.context-path=/flightreservation
 
-
+##flyway
+#spring.flyway.baselineOnMigrate=true
+#spring.flyway.locations=classpath:database/migration
+##flyway.locations=filesystem:db/migration
+#spring.flyway.enabled=true
+#
+## These are some example settings
+#flyway.url=jdbc:mysql://localhost:3306/new_db.driver = com.mysql.jdbc.Driver
+#flyway.user =root
+#flyway.password = admin
 
 
 
