--- a/FlightReservation/src/test/resources/testApplication.properties
+++ b/FlightReservation/src/test/resources/testApplication.properties
@@ -1,5 +1,5 @@
 #mysql driver
-spring.datasource.url=jdbc:mysql://localhost:3306/demo
+spring.datasource.url=jdbc:mysql://localhost:3306/demotest
 spring.datasource.username=root
 spring.datasource.password=admin
 
@@ -17,49 +17,4 @@ server.error.include-message=always
 server.error.include-binding-errors=always
 
 #servlet
-#server.servlet.context-path=/flightreservation
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-#spring mvc
-#spring.mvc.view.prefix=/webapp/
-#spring.mvc.view.suffix=.html
-
-
-#Actuator
-#management.endpoints.web.exposure.include=*
+server.servlet.context-path=/flightreservation
